<resources>
    <string name="app_name">Evento</string>
    <!--Login Page-->
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="forgotten">Forgotten Password?</string>
    <string name="signup">SignUp</string>
    <string name="Add_Event">Add_Event</string>
    <string name="Add_community">Add_Community</string>


    <!-- Create Event Page-->
    <string name="Create_new_Event">Create new Event</string>
    <string name="Event_Location">Location</string>
    <string name="Event_Topic">Choose topic</string>
    <string name="Event_Type">Choose type</string>
    <string name="Event_Description">Description</string>
    <string name="Event_Start_Date">Start date</string>
    <string name="Choose_Start_Date">write date</string>
    <string name="Event_End_Date">End date</string>
    <string name="Next_Page">Next</string>
    <string name="Create_Event">Create Event</string>
    <string name="Listing_of_Event">Event Listing </string>
    <string name="Listing">Choose Listing</string>
    <string name="Choose_Image_Event">Choose Image</string>

    <!-- SignUp Page-->
    <string name="personal_name">Personal Name</string>
    <string name="username">User Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="city">City :</string>
    <string name="gender">Gender :</string>
    <string name="Next">Next</string>

    <!-- UserProfile Page-->
    <string name="page_profile">Profile</string>
    <string name="name">Name</string>

    <!-- UserProfile Menu-->
    <string name="edit">Edit</string>


    <!-- Photo Description In Page User_Profile-->
    <string name="desc_photo">This is User Profile Picture</string>

    <!--Navigation Bottom Menu-->
    <string name="home">Home</string>
    <string name="event">Events</string>
    <string name="community">communities</string>
    <string name="search">search</string>
    <string name="add_Event_OR_Community">add</string>

    <!--Photo Description In Page Bottom_Bar-->
    <string name="desc_photo_event">This is Event Picture</string>


    <!--Edit User Profile-->
    <string name="save">Save</string>
    <string name="older_pass">Older Password</string>

    <!--Invalid-->
    <string name="invalidEmail">Invalid Email</string>
    <string name="invalid">Required</string>
    <string name="invalidPassword">Invalid Password,The Password Should be Greater Than 6 Numbers</string>
    <string name="invalidConfirmPassword">Not matched the Password</string>
    <string name="invalidPhone">Invalid Phone</string>
    <string name="invalidAddress">Invalid Address,Should be Greater Than 10 character,character and Number only</string>
    <string name="invalidPersonName">Invalid Name,Should be character only </string>
    <string name="invalidName">Invalid Name</string>

    <!--Splash Screen-->
    <string name="desc_photo_splash_screen">This Photo To Splash Screen</string>
    <string name="log_out">Log out</string>

    <!--item Community-->
    <string name="join_us">Join Us</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="not_a_member_sign_up">not a member? sign up</string>
    <string name="make_your_event_a_memory">make your event a memory</string>
    <string name="logo_photo">logo photo</string>

    <!--create Community-->
    <string name="name_community">Name</string>
    <string name="desc_community">Description</string>
    <string name="role_community">Role</string>
    <string name="state_community">State</string>
    <string name="create_community">Create Community</string>

    <!--Page Sign Up 1 & 2-->
    <string name="title_activity_sign_up_two">Sign_up_two</string>
    <string name="tv_signUp_2">Page 2 from 2</string>
    <string name="tv_sign_up1">Page 1 From 2</string>

    <!--Welcome Page-->
    <string name="welcome">Page 1 From 2</string>

    <!--Bottom bar Page-->
    <string name="create">Create</string>

    <!-- Event Details Page-->
    <string name="Topic_Event">Topic</string>
    <string name="Type_Event">Type</string>
</resources>
