<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Log_in">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/logo_photo"
        android:src="@drawable/logo_slogan" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_or_padding_16"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_or_padding_16"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


        <Button
            android:id="@+id/btn_log_in"
            style="@style/style_button_login"
            android:layout_width="match_parent"
            android:text="@string/login"
            android:layout_margin="@dimen/margin_or_padding_16"
            android:textColor="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/txt_forgotten_pass"
        style="@style/style_texts_in_login_page"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/margin_or_padding_8"
        android:layout_marginBottom="@dimen/margin_or_padding_16"
        android:layout_marginStart="@dimen/margin_or_padding_16"
        android:text="@string/forgotten" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/margin_or_padding_16"
            android:layout_marginEnd="@dimen/margin_or_padding_16"
            android:layout_marginStart="@dimen/margin_or_padding_16"
            android:layout_marginTop="@dimen/margin_or_padding_8"
            android:text="@string/not_a_member_sign_up" />
    </RelativeLayout>
</LinearLayout>