<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_pic"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_or_padding_40"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_log_in1"
            style="@style/style_button_login"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/margin_or_padding_16"
            android:layout_marginRight="@dimen/margin_or_padding_8"
            android:layout_weight="1"
            android:text="@string/login"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_sign_up1"
            style="@style/style_button_login"
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/margin_or_padding_16"
            android:layout_marginStart="@dimen/margin_or_padding_8"
            android:layout_weight="1"
            android:background="@drawable/strok_button"
            android:text="@string/signup"
            android:textColor="@color/white" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_or_padding_10"
        android:text="@string/make_your_event_a_memory"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="12sp" />

</RelativeLayout>