<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Create_Community">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/margin_or_padding_8">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ed_community_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_or_padding_16"
                android:hint="@string/name_community"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/margin_or_padding_8">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ed_community_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_or_padding_16"
                android:hint="@string/desc_community"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_or_padding_8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_or_padding_16"
            android:layout_marginTop="2dp"
            android:text="@string/role_community"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_or_padding_16"
            android:layout_marginLeft="@dimen/margin_or_padding_8"
            android:layout_marginRight="@dimen/margin_or_padding_16"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_or_padding_8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_or_padding_16"
            android:layout_marginTop="2dp"
            android:text="@string/state_community"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_or_padding_16"
            android:layout_marginLeft="@dimen/margin_or_padding_8"
            android:layout_marginRight="@dimen/margin_or_padding_16"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_or_padding_16"
        android:gravity="center">

        <Button
            android:id="@+id/btn_create_community"
            style="@style/style_button_login"
            android:layout_width="wrap_content"
            android:text="@string/create_community"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>