<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Sign_Up">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_or_padding_8"
                    android:layout_marginLeft="@dimen/margin_or_padding_16"
                    android:layout_marginRight="@dimen/margin_or_padding_16"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_or_padding_8"
                    android:layout_marginLeft="@dimen/margin_or_padding_16"
                    android:layout_marginRight="@dimen/margin_or_padding_16"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_or_padding_8"
                    android:layout_marginLeft="@dimen/margin_or_padding_16"
                    android:layout_marginRight="@dimen/margin_or_padding_16"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/ed_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_or_padding_8"
                    android:layout_marginLeft="@dimen/margin_or_padding_16"
                    android:layout_marginRight="@dimen/margin_or_padding_16"
                    android:hint="@string/confirm_pass"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/gender_tx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_or_padding_16"
                    android:layout_marginTop="2dp"
                    android:text="@string/gender"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner_Gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_or_padding_16"
                    android:layout_marginLeft="@dimen/margin_or_padding_8"
                    android:layout_marginRight="@dimen/margin_or_padding_16"
                    android:layout_toRightOf="@id/gender_tx"
                    android:spinnerMode="dropdown" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_sign_up_two"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_or_padding_16"
                android:layout_marginLeft="@dimen/margin_or_padding_16"
                android:layout_marginRight="@dimen/margin_or_padding_16"
                android:background="@drawable/custom_button"
                android:text="@string/signup"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_signUp_2"
                android:textSize="@dimen/text_size_18" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>